why do i have to type somthing to commit its so so so so stupid i wish it did the thing it does in github where it says "updated {file}" by default in vscode ughh

--- a/quiz/index.html
+++ b/quiz/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
-    <h1>Welcome to the Quiz</h1>
+    <h1>Hello! Welcome to my Quiz!</h1>
     <div id="quiz-container"></div>
     <script src="src/script.js"></script>
 </body>
