--- a/quiz/index.html
+++ b/quiz/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
-    <h1>Hello! Welcome to my Quiz!</h1>
+    <h1>Welcome to my Quiz about Living Organisims!</h1>
     <div id="quiz-container"></div>
     <script src="src/script.js"></script>
 </body>
