--- a/htmlopener/index.html
+++ b/htmlopener/index.html
@@ -13,5 +13,6 @@
         <div id="display-area" class="output"></div>
     </div>
     <script src="js/app.js"></script>
+    <script src="js/fullscreenButton.js"></script>
 </body>
 </html>
