--- a/htmlopener/index.html
+++ b/htmlopener/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="container">
         <h1>HTML Opener</h1>
-        <input type="file" id="file-input">
+        <input type="file" id="file-input" accept=".html">
         <div id="display-area" class="output"></div>
     </div>
+    <button id="fullscreen-button">Fullscreen</button>
     <script src="js/app.js"></script>
-    <script src="js/fullscreenButton.js"></script>
 </body>
 </html>
