--- a/quiz/index.html
+++ b/quiz/index.html
@@ -10,5 +10,6 @@
     <h1>Welcome to my Quiz about Living Organisims!</h1>
     <div id="quiz-container"></div>
     <script src="src/script.js"></script>
+    <script>console.log("Testing Console")</script>
 </body>
 </html>
